Frog/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/ecs100.jar:/Users/caseyglover/Projects/f
-d
/Users/caseyglover/Projects/f/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/caseyglover/Projects/f/FrogGame.java
<---- end of javadoc command ---->
Loading source file /Users/caseyglover/Projects/f/FrogGame.java...
/Users/caseyglover/Projects/f/FrogGame.java:165: error: illegal start of expression
    public static void main(String[] arguments){
    ^
/Users/caseyglover/Projects/f/FrogGame.java:165: error: illegal start of expression
    public static void main(String[] arguments){
           ^
/Users/caseyglover/Projects/f/FrogGame.java:165: error: ';' expected
    public static void main(String[] arguments){
                 ^
/Users/caseyglover/Projects/f/FrogGame.java:165: error: '.class' expected
    public static void main(String[] arguments){
                                     ^
/Users/caseyglover/Projects/f/FrogGame.java:165: error: ';' expected
    public static void main(String[] arguments){
                                              ^
/Users/caseyglover/Projects/f/FrogGame.java:169: error: reached end of file while parsing
}
 ^
6 errors
